# probe-selection

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/apis/: congestion_detection.py  device_processor.py  jitterbug_analyzer.py
src/evaluation/: dataset_builders.py
src/jitterbug/: _jitter.py  _latency_jump.py  bcp.py  cong_inference.py  filters.py  preprocessing.py  signal_energy.py
src/jitterbug/bayesian_changepoint_detection/: bayesian_models.py  offline_likelihoods.py  priors.py
src/optimization/: baselines.py
src/scripts/: compute_event_overlaps.py  detect_jumps.py  run_sampling_algo.py
